<resources>

    <string name="title_section1">Weights</string>
    <string name="title_section2">Chart</string>
    <string name="action_add">Add</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="new_weight_hint">New Weight</string>
    <string name="add_with_current_timestamp">Add now</string>
    <string name="add_with_custom_date">Select date/time</string>

    <string name="app_name">Pedometer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Set Goal</string>
    <string name="weight_title">Set Weight (kg)</string>
    <string name="height_title">Set Height (cm)</string>
    <string name="gender_title">Select gender</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
