<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="goal"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="height"
            app:title="@string/height_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="weight"
            app:title="@string/weight_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="male"
            app:entries="@array/gender_entries"
            app:entryValues="@array/gender_values"
            app:key="gender"
            app:title="@string/gender_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
